gke/gke-expose-services/istio-http-lb/hello-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello
  namespace: default
spec:
  selector:
    matchLabels:
      run: hello
      version: v1
  replicas: 2
  template:
    metadata:
      labels:
        run: hello
        version: v1
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:1.0
        imagePullPolicy: IfNotPresent
        name: hello
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello2
  namespace: default
spec:
  selector:
    matchLabels:
      run: hello
      version: v2
  replicas: 2
  template:
    metadata:
      labels:
        run: hello
        version: v2
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:2.0
        imagePullPolicy: IfNotPresent
        name: hello2
        ports:
        - containerPort: 8080
          protocol: TCP
---
